
 The "SimGrid makes psssshiiiit and jumps into the cloud" release.
 
 CMAKE:
 * Remove option custom_flags. Now use environment variables CFLAGS 
   and LDFLAGS.
  
 MSG:
 * Add an experimental interface to manipulate VMs. They are mainly
   process groups with very few intrinsic semantic, but they should
   allow you to build the semantic you want easily.

 SimDag:
 * New type of typed tasks SD_TASK_COMP_PAR_AMDAHL that represents a
   parallel task whose initial work is distributed among host according
   to the Amdahl's law. Such tasks are created with a parameter alpha
   that corresponds to the non-parallelizable part of the computation.

   Before calling SD_task_schedulel or SD_task_schedulev, the
   SD_task_distribute_comp_amdahl function has to be called with the
   desired number of workstations. The filling of computation_amount and
   communication_amount (actually empty) structures is then done
   seamlessly.
 * New function SD_workstation_dump to display various information

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.7.1) NOT RELEASED; urgency=low

 MSG:
 * Restore the prototype of MSG_process_create_with_environment() to
   the pre-3.7 situation by removing the kill_time argument.
 * Add a MSG_process_set_kill_time() function instead.

 SURF:
 * Fix weird behaviors when dealing with parallel tasks.

 Build System:
 * Fix compilation when using MSG_USE_DEPRECATED.
 * Fix compilation on Macs.
 * Environment variables CFLAGS and LDFLAGS are now honored by cmake.

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.7) stable; urgency=low

  The "spring cleanups (before the next Big Project kicks in)" release.

  Models:
  * We can specify the SMPI latency/bandwidth factor with command line
    add --cfg=smpi/bw_factor:"threshold0:value0;...;thresholdN:valueN"
    or add --cfg=smpi/lat_factor:"threshold0:value0;...;thresholdN:valueN"