@@ -11,6 +11,10 @@ SimGrid (3.8) NOT RELEASED; urgency=low
    process groups with very few intrinsic semantic, but they should
    allow you to build the semantic you want easily.
 
+ Simix:
+ * Bug fixes around the resource failures: don't let the processes
+   survive the host they are running onto
+
  SimDag:
  * New type of typed tasks SD_TASK_COMP_PAR_AMDAHL that represents a
    parallel task whose initial work is distributed among host according
